fixed layout issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,7 @@ body {
   fill: white !important;
   stroke: white !important;
 }
+
+/* *{
+  border: 1px solid red;
+} */
